# excalibur

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATIONS.bib  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: tests.yml
docs/: README.md  build.py
docs/source/: conf.py  index.rst
docs/source/excalibur/: applications.rst  calibration.rst  development.rst  installation.rst  publications.rst  targets.rst
excalibur/: __init__.py
excalibur/calibration/: __init__.py  base.py
excalibur/calibration/frame2frame/: __init__.py  base.py  qcqp_dq.py
excalibur/calibration/hand_eye/: __init__.py  andreff.py  base.py  daniilidis.py  qcqp_dq.py  qcqp_hm.py  schmidt.py  wei.py
excalibur/calibration/herw/: __init__.py  base.py  dornaika.py  infrastructure.py  li.py  qcqp_dq.py  separable.py  shah.py  tabb.py  wang.py
excalibur/calibration/point2line/: __init__.py  base.py  qcqp_hm.py
excalibur/calibration/point2plane/: __init__.py  base.py  qcqp_hm.py
excalibur/calibration/point2point/: __init__.py  arun.py  base.py  horn_quat.py  qcqp_dq.py  qcqp_hm.py
excalibur/calibration/utils/: conditioning.py  fix_translation.py  ransac.py
excalibur/fitting/: __init__.py  line.py  plane.py  sphere.py
excalibur/generation/: transform.py
excalibur/io/: __init__.py  calibration.py  camera.py  cloud.py  dataclass.py  geometry.py  image.py  opencv.py  stamped.py  transforms.py  utils.py
excalibur/metrics/: __init__.py  infrastructure.py  transformation.py
excalibur/optimization/: __init__.py  constraints.py  cvx_utils.py  linear.py  qcqp.py  recovery.py  utils.py
excalibur/optimization/dq/: __init__.py  constraints.py  planar.py  qcqp.py  recovery.py
excalibur/optimization/hm/: __init__.py  constraints.py  qcqp.py  recovery.py
excalibur/processing/: __init__.py  base.py  io.py  transforms.py
excalibur/ros/: __init__.py  cv_bridge.py  header.py  image.py  pointcloud2.py  reader.py
excalibur/targets/camera/: aruco.py  charuco.py  checkerboard.py  checkerboard_combi.py  utils.py
excalibur/targets/lidar/: board.py  plane.py  sphere.py  utils.py
excalibur/utils/: evaluation.py  factory.py  gauss.py  image.py  logging.py  math.py  motion3d.py  parameters.py  parsing.py
excalibur/visualization/: __init__.py  cloud.py  colors.py  image.py  poses.py  table.py
publications/: README.md
publications/data/: README.md
publications/data/brookshire/: sensor1.m3d  sensor2.m3d
publications/data/lehr/: calib.yaml
publications/data/scripts/: convert_brookshire.py  convert_euroc_ground_truth.py  convert_euroc_openvslam.py  convert_euroc_orbslam.py  (+5 more)
publications/hand_eye/: brookshire.py  euroc.py  kitti_odometry.py  kitti_odometry_planar.py  utils.py
publications/hand_eye_monocular/: brookshire.py  euroc.py  euroc_multiscale.py  utils.py
publications/herw_infrastructure/: ali_herw.py  lehr_infrastructure.py  utils.py
scripts/calibration/: frame2frame.py  hand_eye.py  herw.py  point2point.py
scripts/detection/: camera_target.py  lidar_plane.py  lidar_target.py
scripts/transforms/: merge_calibrations.py  show_frames.py
scripts/utils/: m3d_apply.py
scripts/visualization/: show_camera_lidar.py  show_lidars.py
test/: data.py  test_calibration_scripts.py  test_detection_scripts.py  test_frame2frame_calibration.py  test_hand_eye_calibration.py  test_herw_calibration.py  test_point2line_calibration.py  test_point2plane_calibration.py  test_point2point_calibration.py  test_publications.py  test_util_scripts.py  utils.py
(+219 files in other folders)
