[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "excalibur"
authors = [
    {name = "Markus Horn", email = "markus.hn11@gmail.com"},
    {name = "Thomas Wodtko", email = "thomas.wodtko@uni-ulm.de"},
]
description = "Excalibur"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies", "readme", "version"]


[tool.setuptools]
include-package-data = false


[tool.setuptools.packages.find]
include = ["excalibur*"]


[tool.setuptools.dynamic]
version = {attr = "excalibur.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
develop = [
    "flake8>=4.0",
    "pytest>=6.2",
    "pytest-cov",
    "Sphinx>=4.4",
    "sphinx_rtd_theme",
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]
