[metadata]
name = excalibur
version = attr: excalibur.VERSION
description = Excalibur
long_description = file: README.md, LICENSE
author = Markus Horn
author_email = markus.hn11@gmail.com
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = False
packages = find:

[flake8]
exclude =
    .mypy_cache
    .pytest_cache
    .venv
    .vscode
    .git
    __pycache__
    build
    doc
    docker
    extern
    include
    src
    venv
max-line-length = 120

[tool:pytest]
testpaths = test
